--- a/core/static/core/css/dashboard.css
+++ b/core/static/core/css/dashboard.css
@@ -1,3 +1,3 @@
-.control {
-  @apply w-40 cursor-pointer rounded-xl p-4 text-lg shadow;
+header#sectors ul li {
+  @apply w-40 cursor-pointer rounded-xl bg-gray-200 p-4 text-lg shadow;
 }
