--- a/core/static/core/css/enroll.css
+++ b/core/static/core/css/enroll.css
@@ -1,7 +1,11 @@
+main.framed {
+  @apply border border-slate-400 shadow-md;
+}
+
 form > section > article > * {
   @apply mb-2 last:mb-0;
 }
 
 form section article {
-  @apply border border-slate-300 bg-gray-200 px-11 py-7;
+  @apply border border-slate-300 bg-slate-200 px-11 py-9;
 }
