--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,26 +10,17 @@
     {% block head %}{% endblock %}
     <script defer src="{% static 'core/dist/js/page.js' %}"></script>
   </head>
-  <body class="relative flex h-screen bg-color-bg" x-data="{ open: false }">
+  <body class="relative flex h-screen bg-slate-200" x-data="{ open: false }">
     {% include "core/messages.html" %}
     {% if not no_nav|default:False %}
-      {% include "core/navbar.html" %}
+    {% include "core/navbar.html" %}
     {% endif %}
     <div class="w-full overflow-y-scroll">
       {% if not no_nav|default:False %}
         {% include "core/header.html" %}
-      <div class="pt-24">
-      {% else %}
-      <div>
       {% endif %}
-<<<<<<< HEAD
       {% block content %}{% endblock %}
       <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-=======
-        {% block content %}{% endblock %}
-      </div>
->>>>>>> main
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   </body>
 </html>
