--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -1,26 +1,17 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
-<title>Cadastrar usuário</title>
 <script defer src="{% static 'core/js/enroll.js' %}"></script>
 <link rel="stylesheet" href="{% static 'core/dist/css/enroll.css' %}" />
 {% endblock %} {% block content %}
-<main class="framed m-8 p-7">
+<main class="framed m-8 mb-20 p-7">
   <form
     action="{% url 'enroll' %}"
     method="POST"
-    enctype="multipart/form-data"
     class="flex flex-col gap-3"
     @submit="submit"
     x-data="fields"
   >
     <nav class="flex items-center justify-between gap-10">
-      <div class="flex gap-4">
-        <h1 class="font-sans mb-2 text-3xl font-bold">Matrícula</h1>
-        <select name="role" id="sl-role" x-model="role">
-          <option selected value="student">Estudante</option>
-          <option value="teacher">Professor</option>
-          <option value="coordinator">Coordenador</option>
-        </select>
-      </div>
+      <h1 class="mb-2 font-sans text-3xl font-bold">Matrícula</h1>
       <ul class="flex items-center gap-3">
         <li>
           <button
@@ -49,7 +40,7 @@
         </li>
         <li>
           <button
-            @click.prevent="switchTab()"
+            @click.prevent="tab = 'contato'"
             :class="tab == 'contato' && 'text-cyan-600'"
             class="transition-all"
           >
@@ -82,10 +73,7 @@
           </button>
         </li>
       </ul>
-      <a
-        href="{% url 'import/users' %}"
-        class="btn flex items-center gap-2 font-semibold"
-      >
+      <a href="{% url 'management/students' %}" class="btn flex items-center gap-2 font-semibold">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -106,7 +94,7 @@
     {% csrf_token %}
     <section class="grid grid-cols-2 gap-4" x-show="tab === 'identidade'">
       <article>
-        <h2 class="font-sans mb-2 text-2xl font-bold">Informações pessoais</h2>
+        <h2 class="mb-2 font-sans text-2xl font-bold">Informações pessoais</h2>
         <div class="flex gap-3">
           <div class="field grow">
             <label for="txt-username">Nome</label>
@@ -117,7 +105,6 @@
               maxlength="150"
               minlength="5"
               class="w-full"
-              x-model="name"
               @keydown="validateName"
               required
             />
@@ -142,7 +129,6 @@
               name="cpf"
               id="txt-cpf"
               class="w-full"
-              :class="cpfOk || 'border-red-500'"
               required
               x-model="cpf"
               x-mask="999.999.999-99"
@@ -155,7 +141,6 @@
               name="rg"
               id="txt-rg"
               class="w-full"
-              :class="rgOk || 'border-red-500'"
               required
               x-model="rg"
               x-mask="99.999.999-9"
@@ -180,6 +165,85 @@
             <label for="rd-nb">Não binário</label>
           </span>
         </div>
+        <div class="mt-4 flex items-center gap-1" x-data="{ check: false }">
+          <label for="cb-afro">Afrodescendente:</label>
+          <input
+            type="checkbox"
+            name="afro"
+            id="cb-afro"
+            x-model="check"
+            aria-describedby="ch-afro-desc"
+          />
+          <span
+            id="ch-afro-desc"
+            class="ml-1"
+            x-text="check ? '(Sim)' : '(Não)'"
+          ></span>
+        </div>
+        <div class="my-3 flex items-center gap-3">
+          <label for="sl-school">Escolaridade pública:</label>
+          <select name="public-schooling" id="sl-school">
+            <option value="C">Completo</option>
+            <option value="B">Ensino Básico</option>
+            <option value="F" selected>Ensino Fundamental</option>
+            <option value="M">Ensino Médio</option>
+            <option value="N">Nenhuma</option>
+          </select>
+        </div>
+      </article>
+
+      <article>
+        <h2 class="mb-2 font-sans text-2xl font-bold">Cidadania</h2>
+        <div class="field">
+          <label for="nat-box">Naturalidade</label>
+          <span id="nat-box" class="flex items-center gap-2">
+            <input
+              type="text"
+              name="natural-city"
+              id="txt-city"
+              value="{{ city }}"
+              required
+            />
+            <select name="natural-state" id="sl-state">
+              <template
+                x-for="code in [
+              'RO','AC','AM','RR','PA','AP','TO','MA','PI',
+              'CE','RN','PB','PE','AL','SE','BA','MG','ES',
+              'RJ','SP','PR','SC','RS','MS','MT','GO','DF',
+            ]"
+              >
+                <option
+                  :value="code"
+                  :selected="code == '{{ state }}'"
+                  x-text="code"
+                ></option>
+              </template>
+              <option value=""></option>
+            </select>
+          </span>
+        </div>
+        <div class="flex gap-3">
+          <div class="field">
+            <label for="txt-nation">Nacionalidade</label>
+            <input
+              type="text"
+              name="nationality"
+              id="txt-nation"
+              value="{{ country }}"
+              required
+            />
+          </div>
+          <div class="field">
+            <label for="txt-origin">País de origem</label>
+            <input
+              type="text"
+              name="country-of-origin"
+              id="txt-origin"
+              value="{{ country }}"
+              required
+            />
+          </div>
+        </div>
         <div class="field mt-4 flex items-center">
           <label for="civil-box">Estado civíl:</label>
           <span id="civil-box" class="flex items-center">
@@ -200,105 +264,12 @@
             <label for="rd-widow">Viúvo</label>
           </span>
         </div>
-      </article>
-
-      <article>
-        <div class="mt-4 flex items-center gap-1" x-data="{ check: false }">
-          <label for="cb-afro">Afrodescendente:</label>
-          <input
-            type="checkbox"
-            name="afro"
-            id="cb-afro"
-            x-model="check"
-            aria-describedby="ch-afro-desc"
-          />
-          <span
-            id="ch-afro-desc"
-            class="ml-1"
-            x-text="check ? '(Sim)' : '(Não)'"
-          ></span>
-        </div>
-        <div class="mt-4 flex items-center gap-1" x-data="{ check: false }">
-          <label for="cb-indigenous">Indígena:</label>
-          <input
-            type="checkbox"
-            name="indigenous"
-            id="cb-indigenous"
-            x-model="check"
-            aria-describedby="ch-indigenous-desc"
-          />
-          <span
-            id="ch-indigenous-desc"
-            class="ml-1"
-            x-text="check ? '(Sim)' : '(Não)'"
-          ></span>
-        </div>
-        <template x-if="role == 'student'">
-          <div>
-            <div class="field">
-              <label for="txt-deficiencies">Deficiências</label>
-              <input
-                type="text"
-                name="deficiencies"
-                id="txt-deficiencies"
-                maxlength="50"
-              />
-            </div>
-            <div class="my-3 flex items-center gap-3">
-              <label for="sl-school">Escolaridade pública:</label>
-              <select name="public-schooling" id="sl-school">
-                <option value="C">Completo</option>
-                <option value="B">Ensino Básico</option>
-                <option value="F" selected>Ensino Fundamental</option>
-                <option value="M">Ensino Médio</option>
-                <option value="N">Nenhuma</option>
-              </select>
-            </div>
-            <div class="my-3 flex items-center gap-3">
-              <label for="sl-classroom">Turma:</label>
-              <select name="classroom" id="sl-classroom">
-                {% for classroom in classrooms %}
-                <option value="{{ classroom.pk }}">{{ classroom }}</option>
-                {% endfor %}
-              </select>
-            </div>
-          </div>
-        </template>
-
-        <div class="mt-4 flex gap-2">
-          <label
-            for="file-picture"
-            class="btn flex w-max cursor-pointer items-center gap-1"
-          >
-            <span x-text="imageName ?? 'Foto de perfil'"></span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="2.2"
-              stroke="currentColor"
-              class="h-5 w-5"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
-              />
-            </svg>
-          </label>
-          <input
-            type="file"
-            name="picture"
-            id="file-picture"
-            accept="image/*"
-            required
-            hidden
-            @input="imageName = $el.files[0].name"
-          />
-          <button class="btn rounded-lg font-semibold" @click="switchTab()">
-            Próximo
-          </button>
-        </div>
+        <button
+          class="btn mt-9 rounded-lg font-semibold"
+          @click="tab = 'contato'"
+        >
+          Próximo
+        </button>
       </article>
     </section>
 
@@ -308,7 +279,7 @@
       x-data="address"
     >
       <article>
-        <h2 class="font-sans mb-2 text-2xl font-bold">Contato</h2>
+        <h2 class="mb-2 font-sans text-2xl font-bold">Contato</h2>
 
         <div class="flex gap-3">
           <div class="field grow">
@@ -319,7 +290,6 @@
               id="txt-email"
               class="w-full"
               required
-              @keydown="validateEmail"
             />
           </div>
           <div class="field">
@@ -350,18 +320,30 @@
           <button class="btn block" @click.prevent="fillCEP($refs.cep.value)">
             Completar
           </button>
+
+          <div class="field">
+            <label for="txt-distance">Distância</label>
+            <input
+              type="number"
+              name="distance"
+              id="txt-distance"
+              size="4"
+              min="0"
+              max="100"
+              step="0.1"
+            />
+          </div>
         </div>
         <div class="flex gap-3">
           <div class="field grow">
             <label for="txt-city">Cidade</label>
             <input
               type="text"
-              name="city"
+              name="residence-city"
               id="txt-city"
               class="w-full"
               x-model="city"
               required
-              :readonly="$refs.cep.value != ''"
             />
           </div>
           <div class="field grow">
@@ -373,7 +355,6 @@
               class="w-full"
               x-model="neighborhood"
               required
-              :readonly="$refs.cep.value != ''"
             />
           </div>
         </div>
@@ -386,7 +367,6 @@
               id="txt-street"
               class="w-full"
               x-model="street"
-              :readonly="$refs.cep.value != ''"
             />
           </div>
           <div class="field">
@@ -405,51 +385,59 @@
           </div>
         </div>
       </article>
-
       <article>
-        <template x-if="role == 'student'">
-          <h2 class="font-sans mb-2 text-2xl font-bold">Responsáveis</h2>
+        <h2 class="mb-2 font-sans text-2xl font-bold">Responsáveis</h2>
 
-          <div class="field">
-            <label for="txt-guardian">Nome</label>
+        <div class="field">
+          <label for="txt-guardian">Nome</label>
+          <input
+            type="text"
+            name="name-guardian"
+            id="txt-guardian"
+            class="w-full"
+            size="30"
+            @keydown="validateName"
+            required
+          />
+        </div>
+        <div class="flex gap-3">
+          <div class="field grow">
+            <label for="email-guardian">Email</label>
             <input
-              type="text"
-              name="name-guardian"
-              id="txt-guardian"
+              type="email"
+              name="email-guardian"
+              id="email-guardian"
+              maxlength="100"
               class="w-full"
-              size="30"
-              @keydown="validateName"
               required
             />
           </div>
-          <div class="flex gap-3">
-            <div class="field grow">
-              <label for="email-guardian">Email</label>
-              <input
-                type="email"
-                name="email-guardian"
-                id="email-guardian"
-                maxlength="100"
-                class="w-full"
-                required
-              />
-            </div>
-            <div class="field">
-              <label for="tel-guardian" class="ml-1">Telefone</label>
-              <input
-                type="tel"
-                name="phone-guardian"
-                id="tel-guardian"
-                size="12"
-                x-mask="(99)99999-9999"
-                required
-              />
-            </div>
+          <div class="field">
+            <label for="tel-guardian" class="ml-1">Telefone</label>
+            <input
+              type="tel"
+              name="phone-guardian"
+              id="tel-guardian"
+              size="12"
+              x-mask="(99)99999-9999"
+              required
+            />
           </div>
-        </template>
-        <button type="submit" class="btn">Enviar</button>
+        </div>
+        <ul
+          class="mt-4 rounded-md border border-red-500 p-2"
+          x-show="errors.length > 0"
+        >
+          <template x-for="err in errors">
+            <li x-text="err"></li>
+          </template>
+        </ul>
+        <input
+          type="submit"
+          class="mt-9 rounded-lg bg-cyan-700 px-8 py-3 font-semibold text-slate-100 shadow transition-all duration-300 hover:bg-cyan-800 hover:shadow-md"
+          value="Enviar"
+        />
       </article>
-      <!-- Show instead a group option, class, subject etc. -->
     </section>
   </form>
 </main>
