--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -208,6 +208,28 @@
               <span>Horário de aulas</span>
             </a>
           </li>
+          {% elif user|has_role:'teacher' %}
+          <li>
+            <a
+            href="{% url 'schedules' 0 %}"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"
+                />
+              </svg>
+              <span>Horário de aulas</span>
+            </a>
+          </li>
           {% endif %}
           <li>
             <a href="{% url 'eventos' %}">
