--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -4,7 +4,7 @@
 <title>Dashboard</title>
 {% endblock %} {% block content %}
 <main x-data="dashboard">
-  <h1 class="m-5 text-2xl font-bold">Dashboard</h1>
+  <h1 class="m-5 text-2xl">Dashboard</h1>
   <header id="sectors" class="bg-color-bg-alt p-5">
     {% csrf_token %}
     <ul id="sectors" class="flex select-none gap-4">
