--- a/communication/templates/communication/alert/alert.html
+++ b/communication/templates/communication/alert/alert.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{% static 'core/dist/css/alert.css' %}" />
 {% endblock %} {% block content %}
 <main class="m-auto w-5/6 md:w-2/3 mb-10">
-  <h1 class="my-6 font-sans text-2xl md:text-3xl font-bold text-color-primary">
+  <h1 class="my-6 font-sans text-2xl md:text-3xl">
     Reportar problema
   </h1>
   <form
