--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -122,3 +122,11 @@ label.file {
 label.file input {
   @apply hidden;
 }
+
+h1 {
+  @apply mb-4 text-4xl font-semibold text-color-primary;
+}
+
+h2 {
+  @apply font-semibold text-color-primary
+}
