--- a/grades/templates/grades/turmas.html
+++ b/grades/templates/grades/turmas.html
@@ -1,15 +1,9 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
-<script defer>
-  const inputDate = document.getElementById("dataAtual");
-  const dataAtual = new Date().toISOString().split("T")[0];
-  inputDate.value = dataAtual;
-</script>
+<link rel="stylesheet" href="{% static 'core/dist/css/turmas.css' %}" />
 <title>Turmas</title>
 {% endblock %} {% block content %}
-<main class="mx-10 mb-20 mt-4" x-data="{ createDialog: false }">
-  <h1 class="text-center text-4xl font-bold text-color-primary md:text-left">
-    Turma
-  </h1>
+<main class="mx-10 mb-20 mt-4 md:mx-14" x-data="{ createDialog: false }">
+  <h1 class="text-center md:text-left">Turmas</h1>
 
   <!-- TODO: use a select for mobile smh -->
   <ul class="mt-10 flex gap-4">
@@ -18,47 +12,33 @@
     {% endfor %}
   </ul>
 
-  <!--Inicio Menu Filtros -->
-
-  <div class="flex w-[100%] justify-center">
-    <div
-      class="mt-2 flex w-full flex-col items-center justify-center md:flex-row"
-    >
-      <div class="my-2 w-full md:mx-3">
-        <span class="my-2 flex justify-center text-xl text-color-primary"
-          >Turma</span
-        >
-        <select name="Turma" class="w-full rounded-full text-center">
-          <option>Todas</option>
-          <option>A</option>
-          <option>B</option>
-        </select>
-      </div>
-      <div class="my-2 w-full md:mx-3">
-        <span class="my-2 flex justify-center text-xl text-color-primary"
-          >Aula</span
-        >
-        <select name="Aula" class="w-full rounded-full text-center">
-          {% for s in subjects %}
-          <option value="{{ s.pk }}">{{ s }}</option>
-          {% endfor %}
-        </select>
-      </div>
-      <div class="my-2 w-full md:mx-3">
-        <span class="my-2 flex justify-center text-xl text-color-primary"
-          >Data</span
-        >
-        <input
-          type="date"
-          class="w-full rounded-full text-center"
-          id="dataAtual"
-        />
-      </div>
+  <header id="menu">
+    <div>
+      <label for="sl-classroom">Turma:</label>
+      <select name="classroom" id="sl-classroom">
+        <option value="*">Todas</option>
+        <option value="A">A</option>
+        <option value="B">B</option>
+      </select>
     </div>
-  </div>
-
-  <!--Fim do Menu Filtros-->
-
+    <div>
+      <label for="">Aula:</label>
+      <select name="subject" id="sl-subject">
+        {% for s in subjects %}
+        <option value="{{ s.pk }}">{{ s }}</option>
+        {% endfor %}
+      </select>
+    </div>
+    <div>
+      <label for="dt">Data:</label>
+      <input
+        type="date"
+        name="dt"
+        id="dt"
+        :value="new Date().toISOString().split('T')[0]"
+      />
+    </div>
+  </header>
   <!--Inicio Tabs-->
 
   <div class="mt-6" x-data="{ selected: 'option-1' }">
