Update some Tailwind things

--- a/core/templates/core/chamadaprofessores.html
+++ b/core/templates/core/chamadaprofessores.html
@@ -5,7 +5,7 @@
 {% endblock %} {% block content %}
 <main class="framed m-8 mb-10 px-5">
   <h1
-    class="mt-6 text-center text-[40px] font-bold text-color-secondary md:text-left"
+    class="mt-6 text-center text-[40px] font-bold text-color-primary md:text-left"
   >
     Turma
   </h1>
@@ -66,7 +66,7 @@
     </div>
   </div>
   <h1
-    class="mt-6 text-center text-[40px] font-bold text-color-secondary md:text-left"
+    class="mt-6 text-center text-[40px] font-bold text-color-primary md:text-left"
   >
     Chamada
   </h1>
