--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -28,7 +28,7 @@
     </div>
     <span class="text-sm md:ml-1 md:mr-3 md:text-base md:text-gray-400">
       {% if user.is_superuser %}
-        Coordenador
+        Professor
       {% elif user.is_staff %}
         Professor
       {% else %}
