--- a/grades/templates/grades/turmas.html
+++ b/grades/templates/grades/turmas.html
@@ -6,6 +6,154 @@
   class="mx-10 mb-20 mt-4 md:mx-14"
   x-data="{ createDialog: false, tab: 1 }"
 >
+  <section x-show="createDialog" class="dialog-backdrop">
+    <div class="dialog">
+      <header class="mx-10 mt-8 flex justify-between text-3xl font-bold">
+        <h2 class="text-color-primary">Marcar Avaliações</h2>
+        <div>
+          <button
+            @click.prevent="createDialog = false"
+            class="text-3xl font-bold text-color-primary"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="h-6 w-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6 18L18 6M6 6l12 12"
+              />
+            </svg>
+          </button>
+        </div>
+      </header>
+      <section class="flex flex-col gap-3 p-10">
+        <div class="flex flex-col text-lg font-normal">
+          <label>Bimestre:</label>
+          <select
+            name="Bimestre"
+            class="mb-1 h-10 w-64 rounded-full text-center"
+          >
+            <option>1ºBimestre</option>
+            <option>2ºBimestre</option>
+            <option>3ºBimestre</option>
+            <option>4ºBimestre</option>
+          </select>
+        </div>
+        <div class="flex flex-row">
+          <div class="flex w-full flex-col text-lg font-normal">
+            <label>Peso:</label>
+            <select name="Peso" class="h-10 w-36 rounded-full text-center">
+              <option>M1</option>
+              <option>M2</option>
+              <option>M3</option>
+              <option>M4</option>
+            </select>
+          </div>
+          <div class="flex w-full flex-col text-lg font-normal">
+            <label>Tipo:</label>
+            <select name="Tipo" class="h-10 w-36 rounded-full text-center">
+              <option>Atividade</option>
+              <option>Prova</option>
+            </select>
+          </div>
+        </div>
+        <div class="flex flex-col px-12 text-lg font-normal">
+          <label>Titulo:</label>
+          <input type="text" class="h-10" name="title" required />
+        </div>
+        <div
+          class="flex items-center gap-1 px-12 text-lg font-normal"
+          x-data="{ anexoMencao: 'Anexo' }"
+        >
+          <label>Data de Lançamento:</label>
+          <input
+            type="date"
+            :min="new Date().toISOString().split('T')[0]"
+            :value="new Date().toISOString().split('T')[0]"
+            name="date"
+          />
+          <label
+            for="file-picture"
+            class="btn ml-3 flex w-max cursor-pointer items-center gap-1"
+          >
+            <span
+              class="truncate"
+              x-text="anexoMencao ?? 'Foto de perfil'"
+            ></span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="2.2"
+              stroke="currentColor"
+              class="h-5 w-5"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
+              />
+            </svg>
+          </label>
+          <input
+            type="file"
+            name="image"
+            id="file-picture"
+            accept="image/*"
+            required
+            hidden
+            @input="imageName = $el.files[0].name"
+          />
+        </div>
+        <div class="flex h-full flex-col px-12 text-lg font-normal">
+          <label class="pb-2">Conteúdo:</label>
+          <textarea
+            class="h-[180px] w-full resize-none"
+            placeholder="Digite o Comunicado aqui"
+            name="info"
+            required
+          ></textarea>
+        </div>
+        <div class="flex items-center gap-1 px-12 text-lg font-normal">
+          <label>Apenas para professores:</label>
+          <input type="checkbox" name="staff_only" />
+        </div>
+        <div class="flex flex-col px-12 text-lg font-normal">
+          <label>Para o curso:</label>
+          <input
+            type="text"
+            class="h-10"
+            name="course"
+            placeholder="Deixe em branco para um comunicado geral"
+          />
+        </div>
+        <div class="flex flex-col px-12 text-lg font-normal">
+          <label>Para a turma:</label>
+          <input
+            type="text"
+            class="h-10"
+            name="course"
+            placeholder="Deixe em branco para um comunicado geral"
+          />
+        </div>
+        <div class="flex justify-center pt-6">
+          <button
+            type="submit"
+            class="h-12 w-32 rounded-full border-2 border-solid border-color-secondary text-2xl font-bold text-color-secondary transition hover:bg-color-hover"
+          >
+            Aplicar
+          </button>
+        </div>
+      </section>
+    </div>
+  </section>
+
   <h1 class="text-center md:text-left">Turmas</h1>
 
   <!-- TODO: use a select for mobile smh -->
@@ -43,7 +191,7 @@
     </div>
   </header>
 
-  <nav class="mt-4 flex gap-3" id="tabs">
+  <nav class="my-4 flex gap-3" id="tabs">
     <button @click="tab = 1" :class="tab == 1 && 'border-color-primary'">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -83,71 +231,48 @@
     </button>
   </nav>
 
-  <!-- Inicio Notas Screen -->
-
-  <div
-    x-show.transition.in.opacity.duration.750ms="tab == 1"
-    class="p-4"
-  >
-    <div
-      class="mb-6 mt-4 flex flex-row items-center justify-center text-center"
-    >
-      <span
-        class="mr-2 text-center text-[25px] font-semibold text-color-primary"
-        >Bimestre:</span
-      >
-      <select name="Bimestre" class="h-10 w-80 rounded-full text-center">
+  <article x-show.transition.in.opacity.duration.750ms="tab == 1">
+    <div class="my-5">
+      <span class="text-xl font-semibold text-color-primary">Bimestre:</span>
+      <select name="Bimestre" class="ml-3 rounded-full px-16 text-center">
         <option>1ºBimestre</option>
         <option>2ºBimestre</option>
         <option>3ºBimestre</option>
         <option>4ºBimestre</option>
       </select>
     </div>
-    <div class="flex flex-col md:flex-row">
-      <div
-        class="flex w-full flex-grow flex-col rounded-2xl bg-white p-5 md:mr-2 md:mt-4 md:flex-col md:justify-center"
-      >
-        <span
-          class="md:text[38px] mb-2 text-center text-[30px] font-semibold text-color-secondary"
-          >Atribuir Nota</span
-        >
-        <div class="my-4 flex flex-col gap-4 text-center">
+
+    <div class="flex gap-8">
+      <section class="overflow-y-scroll">
+        <h2 class="mb-3 text-3xl text-color-secondary">Atribuir Notas</h2>
+        <ul>
           {% for s in students %}
-          <span class="text-lg font-normal">{{ s }}</span>
+          <li class="mb-1 text-lg font-normal">{{ s }}</li>
           {% endfor %}
-        </div>
-      </div>
-      <div
-        class="mt-4 flex w-full flex-grow flex-col rounded-2xl bg-white p-5 md:ml-2 md:justify-center"
-      >
-        <span class="text-center text-[28px] font-semibold text-color-primary"
-          >Apolo Fonseca da Bezerra</span
-        >
-        <div class="my-2 w-full">
-          <span class="my-2 flex justify-center text-xl text-color-secondary"
-            >Tarefa</span
-          >
-          <select name="Tarefa" class="w-full rounded-full text-center">
+        </ul>
+      </section>
+
+      <section id="detail">
+        <h2 class="mb-9 text-center text-3xl">Nome do Aluno Abençoado</h2>
+        <div class="mx-7 mb-5 flex items-center justify-between gap-2">
+          <label for="">Tarefa:</label>
+          <select name="task">
             <option>Prova</option>
             <option>Atividade</option>
           </select>
         </div>
-        <div class="my-2 w-full">
-          <span class="my-2 flex justify-center text-xl text-color-secondary"
-            >Nota</span
-          >
-          <select name="Nota" class="w-full rounded-full text-center">
+        <div class="mx-7 mb-5 flex items-center justify-between gap-2">
+          <label for="">Nota:</label>
+          <select name="val">
             <option>I</option>
             <option>R</option>
             <option>B</option>
             <option>MB</option>
           </select>
         </div>
-        <div class="my-2 w-full">
-          <span class="my-2 flex justify-center text-xl text-color-secondary"
-            >Menções</span
-          >
-          <select name="Mencao" class="w-full rounded-full text-center">
+        <div class="mx-7 mb-5 flex items-center justify-between gap-2">
+          <label for="">Menções:</label>
+          <select name="mention">
             <option>M1</option>
             <option>M2</option>
             <option>M3</option>
@@ -170,42 +295,40 @@
         <div class="flex w-full flex-col gap-3 md:block md:gap-2">
           <button type="submit">Enviar</button>
         </div>
-      </div>
+      </section>
     </div>
-    <div
-      class="mt-4 flex h-[950px] w-[full] flex-col rounded-2xl bg-white p-5 md:h-[800px] md:flex-col"
-    >
-      <div class="flex h-[8%] w-full flex-row items-center">
-        <span
-          class="mr-1 text-[30px] font-semibold text-color-secondary md:mr-2 md:text-[32px]"
-          >Visão Geral</span
-        >
-        <div
-          class="flex flex-row rounded-full border border-color-secondary px-4 py-1"
-        >
-          <span
-            class="mr-2 hidden font-extralight text-color-secondary sm:block"
-            >Importar</span
+
+    <section class="mt-8 flex flex-col rounded-2xl bg-color-bg-lighter p-7">
+      <header class="flex justify-between">
+        <div class="flex gap-4">
+          <h2 class="text-3xl text-color-secondary">Visão Geral</h2>
+          <div
+            class="flex flex-row rounded-full border-2 border-color-secondary px-4 py-1"
           >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="h-6 w-6 text-color-secondary"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
-            />
-          </svg>
+            <span class="mr-2 hidden text-color-secondary sm:block"
+              >Importar</span
+            >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="h-6 w-6 text-color-secondary"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
+              />
+            </svg>
+          </div>
         </div>
-        <div class="flex items-end md:ml-auto">
-          <span>entrega de notas entre 23/06 e 27/06</span>
-        </div>
-      </div>
+        <span class="italic text-gray-500">
+          Entrega de notas entre 23/06 e 27/06
+        </span>
+      </header>
+
       <div class="flex justify-center">
         <section class="box lg:w-max overflow-x-scroll">
           <table class="main-table border-separate border-spacing-3 px-2">
@@ -230,17 +353,10 @@
           </table>
         </section>
       </div>
-    </div>
-  </div>
+    </section>
+  </article>
 
-  <!-- Fim Notas Screen -->
-
-  <!-- Inicio Provas Screen -->
-
-  <div
-    x-show.transition.in.opacity.duration.750ms="tab == 2"
-    class="p-4"
-  >
+  <div x-show.transition.in.opacity.duration.750ms="tab == 2" class="p-4">
     <div
       class="mb-6 mt-4 flex w-full flex-row items-center justify-between text-center"
     >
@@ -269,159 +385,6 @@
           />
         </svg>
       </button>
-    </div>
-
-    <div
-      :class="createDialog ? 'flex' : 'hidden'"
-      class="fixed inset-0 items-center justify-center bg-black bg-opacity-25"
-    >
-      <div
-        class="m-4 h-[90%] w-[90%] rounded-3xl bg-white pb-10 md:h-[600px] md:w-[600px]"
-      >
-        <header class="mx-10 mt-8 flex justify-between text-3xl font-bold">
-          <h2 class="text-color-primary">Marcar Avaliações</h2>
-          <div>
-            <button
-              @click.prevent="createDialog = false"
-              class="text-3xl font-bold text-color-primary"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="h-6 w-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M6 18L18 6M6 6l12 12"
-                />
-              </svg>
-            </button>
-          </div>
-        </header>
-        <section class="flex flex-col gap-3 p-10">
-          <div class="flex flex-col text-lg font-normal">
-            <label>Bimestre:</label>
-            <select
-              name="Bimestre"
-              class="mb-1 h-10 w-64 rounded-full text-center"
-            >
-              <option>1ºBimestre</option>
-              <option>2ºBimestre</option>
-              <option>3ºBimestre</option>
-              <option>4ºBimestre</option>
-            </select>
-          </div>
-          <div class="flex flex-row">
-            <div class="flex w-full flex-col text-lg font-normal">
-              <label>Peso:</label>
-              <select name="Peso" class="h-10 w-36 rounded-full text-center">
-                <option>M1</option>
-                <option>M2</option>
-                <option>M3</option>
-                <option>M4</option>
-              </select>
-            </div>
-            <div class="flex w-full flex-col text-lg font-normal">
-              <label>Tipo:</label>
-              <select name="Tipo" class="h-10 w-36 rounded-full text-center">
-                <option>Atividade</option>
-                <option>Prova</option>
-              </select>
-            </div>
-          </div>
-          <div class="flex flex-col px-12 text-lg font-normal">
-            <label>Titulo:</label>
-            <input type="text" class="h-10" name="title" required />
-          </div>
-          <div
-            class="flex items-center gap-1 px-12 text-lg font-normal"
-            x-data="{ anexoMencao: 'Anexo' }"
-          >
-            <label>Data de Lançamento:</label>
-            <input
-              type="date"
-              :min="new Date().toISOString().split('T')[0]"
-              :value="new Date().toISOString().split('T')[0]"
-              name="date"
-            />
-            <label
-              for="file-picture"
-              class="btn ml-3 flex w-max cursor-pointer items-center gap-1"
-            >
-              <span
-                class="truncate"
-                x-text="anexoMencao ?? 'Foto de perfil'"
-              ></span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="2.2"
-                stroke="currentColor"
-                class="h-5 w-5"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
-                />
-              </svg>
-            </label>
-            <input
-              type="file"
-              name="image"
-              id="file-picture"
-              accept="image/*"
-              required
-              hidden
-              @input="imageName = $el.files[0].name"
-            />
-          </div>
-          <div class="flex h-full flex-col px-12 text-lg font-normal">
-            <label class="pb-2">Conteúdo:</label>
-            <textarea
-              class="h-[180px] w-full resize-none"
-              placeholder="Digite o Comunicado aqui"
-              name="info"
-              required
-            ></textarea>
-          </div>
-          <div class="flex items-center gap-1 px-12 text-lg font-normal">
-            <label>Apenas para professores:</label>
-            <input type="checkbox" name="staff_only" />
-          </div>
-          <div class="flex flex-col px-12 text-lg font-normal">
-            <label>Para o curso:</label>
-            <input
-              type="text"
-              class="h-10"
-              name="course"
-              placeholder="Deixe em branco para um comunicado geral"
-            />
-          </div>
-          <div class="flex flex-col px-12 text-lg font-normal">
-            <label>Para a turma:</label>
-            <input
-              type="text"
-              class="h-10"
-              name="course"
-              placeholder="Deixe em branco para um comunicado geral"
-            />
-          </div>
-          <div class="flex justify-center pt-6">
-            <button
-              type="submit"
-              class="h-12 w-32 rounded-full border-2 border-solid border-color-secondary text-2xl font-bold text-color-secondary transition hover:bg-color-hover"
-            >
-              Aplicar
-            </button>
-          </div>
-        </section>
-      </div>
     </div>
   </div>
 
