password reset screens already done

--- a/core/templates/core/password/password_reset_complete.html
+++ b/core/templates/core/password/password_reset_complete.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
-<html>
+{% load static %}
 <head>
     <title>Solicitar Redefinição de Senha</title>
+    <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
+    <script>
+        //return to login
+        window.onload = function(){
+            var tempo = 5000;
+            var url = "{% url 'login' %}"
+        
+            setTimeout(function(){
+            window.location = url;
+            }, tempo);
+        }
+    </script>
 </head>
-<body class="bg-gray-100">
-    <div class="container mx-auto p-8">
-        <h1 class="text-2xl font-semibold mb-4">Agora sua senha foi resetada :D</h1>
+<body class="flex justify-center items-center bg-gray-100">
+    <div class="h-max w-max p-5 rounded-2xl shadow-lg hover:p-6 transition-all bg-gray-200">
+        <p>Sua senha foi redefinida! Você será redirecionado</p>
     </div>
 </body>
 </html>
