--- a/core/templates/core/password/password_reset_confirm.html
+++ b/core/templates/core/password/password_reset_confirm.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Solicitar Redefinição de Senha</title>
+    <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
 </head>
 <body class="bg-gray-100">
-    <div class="container mx-auto p-8">
+    <div class="container mx-auto p-8 bg-gray-200">
         <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
         <form method="post" class="space-y-4">
             {% csrf_token %}
