--- a/core/templates/core/password/password_reset_form.html
+++ b/core/templates/core/password/password_reset_form.html
@@ -10,20 +10,20 @@
         color: transparent;
         user-select: none;
       }
-
-
     </style>
 </head>
-<body class="flex justify-center items-center bg-gray-100">
-  <form method="post" class="space-y-4">
-    <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
-      {% csrf_token %}
-      <span>Email Institucional</span> 
-      {{form}}
-    </br>
-    <div class="flex justify-center mr-[10%]">
-      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>  
-    </div> 
-  </form>
+<body class="flex bg-gray-100">
+  <div class="justify-center items-center">
+    <form method="post" class="space-y-4">
+      <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
+        {% csrf_token %}
+        <span>Email Institucional</span>
+        {{form}}
+      </br>
+      <div class="flex justify-center mr-[10%]">
+        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
